--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 		<link href="./styles/main.css" rel="stylesheet" type="text/css" />
 
-		<script src="dist/bundle.js" defer></script>
+		<script src="./main.bundle.js" defer></script>
+		<script src="./runtime.bundle.js" defer></script>
 	</head>
 
 	<body>
